# automatic_database_creation

./: .pylintrc  LICENSE  README.md
.docker/: Dockerfile  build_image.sh  build_image_zsh.sh  entrypoint.bash  entrypoint.zsh  run_user.sh  run_user_nvidia.sh  setup.bash  setup.zsh
capture_manager/: CMakeLists.txt  package.xml
capture_manager/launch/: astra_capture_manager.launch  ka_capture_manager.launch  reconstruction.launch
capture_manager/notebooks/: capture.ipynb  capture_sequence.ipynb  proccess_capture_sequence.ipynb  reconstruction.ipynb  view_ply.ipynb
capture_manager/scripts/: marker.py  sam_masking.py
capture_manager/srv/: CaptureToFile.srv
commander/: CMakeLists.txt  package.xml  setup.py
commander/config/: reconstruction.perspective
commander/data/: a3dp.yaml  sequence5.yaml  sequence_L.yaml  sequence_S.yaml  sequence_env.yaml
commander/launch/: ka_recon.launch  ur10e_gripper_commander.launch  ur10e_ka_commander.launch
commander/msg/: Goal.msg
commander/notebooks/: a3dp.ipynb  commander_examples_customized.ipynb  commander_gripper_examples.ipynb  commander_ka_examples.ipynb
commander/scripts/: tcp-conversion.py
commander/srv/: GetTcpPose.srv  PickPlace.srv  PlanGoal.srv  PlanSequence.srv  SetEe.srv  TraceTrajectory.srv  VisualizePoses.srv
custom_pkg/: CMakeLists.txt  package.xml
custom_pkg/captures/: cropped_01.ply  cropped_02.ply
custom_pkg/config/: joint_positions.yaml
custom_pkg/launch/: pcl_capture.launch  rosbridge_websocket.launch
custom_pkg/notebooks/: commander_ka_examples.ipynb  reconstruction.ipynb  reconstructionv2.ipynb
custom_pkg/scripts/: filtering_node.py  reconstruction_node.py  simple.py  simple2.py  simple3.py  test.py
industrial_reconstruction/industrial_reconstruction/: CMakeLists.txt  package.xml  setup.py
industrial_reconstruction/industrial_reconstruction/launch/: reconstruction.launch
industrial_reconstruction/industrial_reconstruction/nodes/: industrial_reconstruction_node.py
industrial_reconstruction/industrial_reconstruction/src/industrial_reconstruction/utility/: ros.py
industrial_reconstruction/industrial_reconstruction_msgs/: CMakeLists.txt  package.xml
ur10e_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10e_gripper_moveit_config/config/: joint_limits.yaml  ur10e.srdf
ur10e_gripper_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  (+6 more)
ur10e_ka_moveit_config/: CMakeLists.txt  package.xml
(+42 files in other folders)
