<?xml version="1.0"?>
<package format="2">
  <name>industrial_reconstruction</name>
  <version>0.0.0</version>
  <description>A ROS reconstruction utility leveraging TSDF from Open3D</description>

  <author>Levi Armstrong</author>
  <maintainer email="tyler.marr@swri.org">Tyler Marr</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>industrial_reconstruction_msgs</exec_depend>
  <exec_depend>python3-open3d-pip</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

</package>
