<?xml version="1.0"?>
<package format="3">
  <name>industrial_reconstruction_msgs</name>
  <version>0.0.0</version>
  <description>A collection of ROS interfaces for industrial_reconstruction</description>

  <author>Levi Armstrong</author>
  <maintainer email="tyler.marr@swri.org">Tyler Marr</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
</package>
